--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "require": {
+        "moneyphp/money": "^3.3"
     }
 }
